<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrequencyMusicPlayerV2</string>
    <string name="title_section1">Songs</string>
    <string name="title_section2">Albums</string>
    <string name="title_section3">Artists</string>
    <string name="title_section4">Playlists</string>
    <string name="action_settings">Settings</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_end">ENd</string>
    <string name="last_song">Prev. Song</string>
    <string name="next_song">Next Song</string>
    <string name="unknown_string">Unknown</string>
    <string name="current_song_image">Current Song Image</string>
    <string name="next_song_image">Next Song Image</string>
    <string name="last_song_image">Last Song Image</string>
    <string name="title_activity_now_playing">NowPlaying</string>
    <string name="image_desc">Repeat Button</string>
    <string name="shuffle">Shuffle</string>
    <string name="duration_start">0:00</string>
    <string name="music_playback_control">Music Playback Control</string>
    <string name="album_length">0 Songs</string>
    <string name="artist_album_number">0 Albums</string>
    <string name="album_image">Album Image</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_all">Shuffle</string>
    <string name="selection_number">0 Songs</string>
    <string name="selection_time">0h 0m 0s</string>
    <string name="show_playlist">Show Playlist</string>
    <string name="image">Image</string>
    <string name="init_song_pos">1</string>
    <string name="song_button">Songs</string>
    <string name="albums_button">Albums</string>
    <string name="artists_button">Artists</string>
    <string name="playlists_button">Playlists</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

</resources>
