<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selection_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fmp_background_v2"
    android:orientation="vertical"
    tools:context="darksamurai.frequencymusicplayer.SelectionActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp" >

        <ImageView
            android:id="@+id/selection_album_image"
            android:layout_width="fill_parent"
            android:layout_height="175dp"
            android:contentDescription="@string/album_image"
            android:scaleType="centerCrop"
            android:src="@drawable/no_album_image_v2" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/dark_gray_transparent" >

            <Button
                android:id="@+id/button_play_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:drawableLeft="@drawable/ic_music_play_bw"
                android:drawablePadding="20dp"
                android:text="@string/play_all"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/button_shuffle_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="3dp"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_shuffle_bw"
                android:text="@string/shuffle_all"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/selection_number_songs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/selection_number"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/selection_total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/selection_time"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/selection_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="4dp"
        android:drawSelectorOnTop="true" >

    </ListView>

</LinearLayout>
